Fix daemon selection on the memory settings